<resources>
    <string-array name="languages_array">
        <item>Italian</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
    </string-array>
    <string name="tutorial_header_0">Welcome to IziOzi</string>
    <string name="tutorial_details1_0">This introduction will help you understand how to use this app and
        will only take a few minutes of your time.
        \n\nYou can navigate by swiping the pages from right to left. Let\'s begin.</string>
    <string name="tutorial_header_1">Add pictograms in edit mode</string>
    <string name="tutorial_details1_1">At the first run of the app \"edit mode\" will be activated and you
        will be presented with 6 pictograms. This is called a "board".
        \n\nYou can start editing by tapping on a pictogram.</string>
    <string name="tutorial_details2_1">From the plus buttons you can add another board. The trashbin
        deletes the current board you are on.</string>
    <string name="tutorial_header_2">Set a new image</string>
    <string name="tutorial_details1_2">Tapping on a pictogram will show you a set of options. Setting
        this pictogram as a tree board means adding a board inside it, such that when you click on that
        pictogram, a new board will be displayed.
        \n\nYou can also delete and set an image.</string>
    <string name="tutorial_header_3">Set the pictogram information</string>
    <string name="tutorial_details1_3">After choosing to set an image you can tap on the current empty
        box to select a source for the picture.</string>
    <string name="tutorial_details2_3">You should also set the title and optionally the text to be spoken.
        \n\nInstead of the text to be spoken you can register a sound by pressing the record button. Click
        the save icon when you\'re done.</string>
    <string name="tutorial_header_4">Choose a pictogram source</string>
    <string name="tutorial_details1_4">You have a couple of options to choose your pictograms from.</string>
    <string name="tutorial_details2_4">Selecting to search from the database will position the cursor
        at the top and you can start typing. Let\'s search for the word \"bus\".
        \n\nPress enter when finished to start searching.</string>
    <string name="tutorial_header_5">Database search results</string>
    <string name="tutorial_details1_5">The search results will display a list of pictograms which you
        can scroll through until you find the one you like. Select one by tapping on it. This will
        cause the app to download the image and display it on the preview section.
        \n\nIt will also complete the title field with the title of the image you selected.</string>
    <string name="tutorial_header_6">The main menu</string>
    <string name="tutorial_details1_6">You can enter the main menu by tapping on the three dots in the
        top-right corner. This will present you with all the options available.
        \n\nThe option \"manage boards\" lets you save, load and create a new board. When saving you can use
        \"save as\" to give your board a name. The name will appear when you will load a new board.
    </string>
    <string name="tutorial_details2_6">The \"Lock\" option locks the screen and hides the options menu and
        the system bar. Doing so prevents others from accessing the menu and making changes.
        \n\nTo exit the lock mode position your finger at the top of the screen and swipe down and select
        unlock.
    </string>
    <string name="tutorial_header_7">Change the settings of the board</string>
    <string name="tutorial_details1_7">The settings menu allows you to make changes to your board
        configuration. More pictograms can be displayed by selecting the number of rows and columns.
        \n\nFinally, you can disallow swipe movements from one board to the other and instead use the
        navigational arrows. This is available if you have more than one board.</string>
    <string name="tutorial_header_8">Thank you for using IziOzi</string>
    <string name="tutorial_details1_8">This project is free and open source and some features were developed in collaboration
        with University of Eastern Piedmont. \n\nPlease consider supporting our efforts and donating.
    </string>
    <string name="page_title_0">Intro</string>
    <string name="page_title_1">Edit mode</string>
    <string name="page_title_2">Set image</string>
    <string name="page_title_3">Source</string>
    <string name="page_title_4">Select</string>
    <string name="page_title_5">Database search</string>
    <string name="page_title_6">Menu</string>
    <string name="page_title_7">Settings</string>
    <string name="page_title_8">Finish</string>
    <string name="slideone_header">Welcome to IziOzi</string>
    <string name="slideone_details">This introduction will help you understand how to use this app
        and will only take a few minutes of your time. You can navigate by swiping the pages from right
        to left. Let\'s begin.</string>
    <string name="tutorial">Tutorial</string>
    <string name="exit_tutorial_title">Exit tutorial</string>
    <string name="exit_tutorial_msg">You are about to exit the tutorial. If you are sure then press Exit,
        otherwise press Cancel. You can always access the tutorial later from the menu.
    </string>
    <string name="language">Language</string>
    <string name="finish">Finish</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="continue_string">Continue</string>
    <string name="c_title">Title:</string>
    <string name="c_text">Text to be spoken:</string>
    <string name="s_search">Search</string>
    <string name="manage_medias">Manage files</string>
    <string name="app_name">IziOzi</string>
    <string name="btn_inserttext">Enter the text to say:</string>
    <string name="rows">Rows:</string>
    <string name="cols">Cols:</string>
    <string name="show_borders">Show borders</string>
    <string name="preview">Preview</string>
    <string name="set_image">Set image</string>
    <string name="img_search">Search on database</string>
    <string name="img_camera">Pick from camera</string>
    <string name="choose">Choose...</string>
    <string name="img_gallery">Pick from gallery</string>
    <string name="tap_for_image">Tap here to insert an image!</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome in IziOzi! To setup a new button, i\'m gonna enable the edit mode! Tap on any button to begin the configuration. When you have finished, disable the edit mode, lock the user interface in the menu and you\'re ready! To get more info, please refer to iziozi.martinolessio.com!</string>
    <string name="tts_ready">I\'m ready to speak on your behalf!</string>
    <string name="tts_nosentence">This button does not have a phrase associated!</string>
    <string name="tts_notinitialized">TTS not yet initialized!</string>
    <string name="settings">Settings</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="scan_mode">Scan mode</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="save_as">Save as</string>
    <string name="load">Load</string>
    <string name="new_board">New</string>
    <string name="should_say">I should say:</string>
    <string name="speak_button">Speak!</string>
    <string name="tts_init">TTS init complete!</string>
    <string name="xml_save_fail">Xml save failed!</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <plurals name="unlock_question">
        <item quantity="one">Are you sure you want to unlock the device UI?\n\nMake a choice in 1 second...</item>
        <item quantity="other">Are you sure you want to unlock the device UI?\n\nMake a choice in %d seconds...</item>
    </plurals>
    <string name="title_activity_smimages_search">SMImagesSearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ioabout">IOAboutActivity</string>
    <string name="send_mail">Send mail...</string>
    <string name="app_description">IziOzi is an aumentative and alternative communication app. It is open source, completely free and in daily developement.
        If you have any request, some suggestions or you want to tell us something, write us using the button here under!
        Some features were developed in collaboration with University of Eastern Piedmont.
        If you think this is a useful project and you want to help us, please use the button at the bottom of the page to donate us supporting developement costs! Thank you!</string>
    <string name="image_missing">Missing images!</string>
    <string name="image_missing_text">Application will now download missing files. Please wait until all images are shown.</string>
    <string name="download_error">File download error!</string>
    <string name="image_save_error">There was a problem saving the image file!</string>
    <string name="warning">Warning!</string>
    <string name="data_connection_needed">You need an active data connection to configure a new button! You can\'t search new pictograms until data connection is unavailable!</string>
    <string name="no_picto_found">No pictograms Found!</string>
    <string name="image_download_title">Downloading Image ...</string>
    <string name="download_text">Download in progress ...</string>
    <string name="please_wait">Please wait ...</string>
    <string name="search_in_progress">Search in progress ...</string>
    <string name="unexpected_response">received an unexpected object!</string>
    <string name="request_error">Error on http request!</string>
    <string name="file_delete_warning">Are you sure you want to delete file $1%s?</string>
    <string name="insert_new_name">Insert the new file name:</string>
    <string name="now_recording">We\'re recording!</string>
    <string name="tap_to_stop_recording">Tap anywhere when you\'re done!</string>
    <string name="audio_file">Audio File: </string>
    <string name="no_audio_file">No audio file set.</string>
    <string name="image">PIC</string>
    <string name="board">BRD</string>
    <string name="board_enabled">Tree board</string>
    <string name="edit_picto">Setup pictogram</string>
    <string name="edit_board">Setup board</string>
    <string name="file_already_exists">A file with this name already exists! Please choose another one.</string>
    <string name="delete_page_alert">Are you sure you want to delete this page? The operation will be persistent!</string>
    <string name="manage_boards">Manage boards</string>
    <string name="new_board_alert">Warning! Every unsaved modify will be lost!</string>
    <string name="swap_board">Swap images</string>
    <string name="move">Move</string>
    <string name="move_hint">Tap on the position where the image should be moved. The two images will be swapped.</string>
    <string name="delete_image">Delete image</string>
    <string name="title_activity_iovideo_player">Video</string>
    <string name="enable_swipe">Swipe to change page</string>
    <string name="enable_giga_navigation">Big navigation buttons</string>
    <string name="downloading">Please wait while downloading... </string>
    <string name="done">Done</string>
    <string name="recreate">Recreate</string>
    <string name="speech_search_info">Select the words you\'d like to keep.
        \n\nClick recreate to repeat the speech and add new words or done to start searching.</string>
    <string name="select_all">Select all</string>
</resources>