<!--
  ~ Copyright (c) 2014 Martino Lessio -
  ~ www.martinolessio.com
  ~ martino [at] iziozi [dot] org
  ~
  ~
  ~ This file is part of the IziOzi project.
  ~
  ~ IziOzi is free software:
  ~ you can redistribute it and/or modify it under the terms of the GNU General Public
  ~ License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ IziOzi is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with IziOzi.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_lock"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/lock" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="21"
        android:showAsAction="never"
        android:title="@string/settings" />
    <item android:title="@string/manage_boards">
        <menu>

            <item
                android:id="@+id/action_new"
                android:orderInCategory="30"
                android:showAsAction="never"
                android:title="@string/new_board" />

            <item
                android:id="@+id/action_save"
                android:orderInCategory="30"
                android:showAsAction="never"
                android:title="@string/save" />

            <item
                android:id="@+id/action_save_as"
                android:orderInCategory="31"
                android:showAsAction="never"
                android:title="@string/save_as" />

            <item
                android:id="@+id/action_load"
                android:orderInCategory="32"
                android:showAsAction="never"
                android:title="@string/load" />
        </menu>
    </item>

    <item
        android:id="@+id/scanMode"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="20"
        android:title="@string/scan_mode"
        android:visible="true"></item>

    <item
        android:id="@+id/editMode"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="19"
        android:title="@string/edit_mode"
        android:visible="true"></item>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/about" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="9999999"
        android:showAsAction="never"
        android:title="@string/exit" />


</menu>
