<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Martino Lessio -
  ~ www.martinolessio.com
  ~ martino [at] iziozi [dot] org
  ~
  ~
  ~ This file is part of the IziOzi project.
  ~
  ~ IziOzi is free software:
  ~ you can redistribute it and/or modify it under the terms of the GNU General Public
  ~ License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ IziOzi is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with IziOzi.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/board_enabled"
            android:id="@+id/editModeAlertToggleBoard"
            android:checked="false"
            android:textOn="@string/yes"
            android:textOff="@string/no" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_picto"
            android:id="@+id/editModeAlertActionPicture" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_board"
            android:id="@+id/editModeAlertActionBoard" />
    </LinearLayout>
</LinearLayout>