<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Martino Lessio -
  ~ www.martinolessio.com
  ~ martino [at] iziozi [dot] org
  ~
  ~
  ~ This file is part of the IziOzi project.
  ~
  ~ IziOzi is free software:
  ~ you can redistribute it and/or modify it under the terms of the GNU General Public
  ~ License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ IziOzi is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with IziOzi.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/rows"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:text="@string/cols"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekRows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_toLeftOf="@+id/numRowsLbl"
        android:layout_toRightOf="@+id/textView1"
        android:indeterminate="false"
        android:max="10"
        android:progress="1" />

    <SeekBar
        android:id="@+id/seekCols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/seekRows"
        android:layout_alignRight="@+id/seekRows"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:id="@+id/numColsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignParentRight="true"
        android:text="Col"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/numRowsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:text="Row"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bordersCheckbox"
        android:checked="false"
        android:layout_alignTop="@+id/recordingTextView"
        android:layout_alignRight="@+id/numColsLbl"
        android:layout_alignEnd="@+id/numColsLbl" />

    <TextView
        android:id="@+id/recordingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_borders"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_swipe"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/bordersCheckbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swipe_checkbox"
        android:checked="false"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/bordersCheckbox"
        android:layout_alignStart="@+id/bordersCheckbox" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_giga_navigation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/swipe_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bignav_checkbox"
        android:checked="false"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/swipe_checkbox"
        android:layout_alignStart="@+id/swipe_checkbox" />

</RelativeLayout>
